begin construction of update strengthener function and modify style while correcting misspelling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>The Password Strengther</h1>
     <section>
-      <div class="strengther"></div>
+      <div class="strengthener"></div>
       <div>
         <input type="text" autofocus />
         <div class="password-check"></div>
