--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Project #29 - The Password Strengther App</title>
+    <title>Project #29 - The Password Strengthener App</title>
   </head>
   <body>
-    <h1>The Password Strengther</h1>
+    <h1>The Password Strengthener</h1>
     <section>
       <div class="strengthener"></div>
       <div>
